# coin-tracker

./: .gitignore  Cargo.toml  README.md  database.db  next.config.mjs  package.json  tsconfig.json
app/: coin.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  styles.module.css
app/_components/coin/: coin.tsx
app/_components/navbar/: navbar.tsx  styles.module.css
app/add/: page.tsx  styles.module.css
app/api/add/: route.tsx
src/: coin.rs  database.rs  lib.rs  main.rs  numista.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: coin.rs  database.rs  lib.rs  main.rs  state.rs
src-tauri/tests/: database.rs
src/database/: Makefile  coin.h  database.c  database.h  database.py  test.c
